--- a/src/main/resources/assets/ardium/lang/en_US.lang
+++ b/src/main/resources/assets/ardium/lang/en_US.lang
@@ -3,6 +3,11 @@ tile.blockArdium.name=Ardium Block
 tile.ardiumFence.name= Ardium Fence
 tile.ardiumFenceGate.name=Ardium Fence Gate
 tile.stairsArdiumBlock.name=Ardium Stairs
+tile.customSlab.ardium.name=Ardium Slab
+tile.customSlab.diamond.name=Diamond Slab
+tile.customSlab.gold.name=Gold Slab
+tile.customSlab.iron.name=Iron Slab
+tile.customSlab.emerald.name=Emerald Slab
 
 item.ingotArdium.name=Ardium Ingot
 item.ingotOxium.name=Oxium Ingot
@@ -10,7 +15,7 @@ item.oxiumNugget.name=Oxium Nugget
 item.oxiumFragment.name=Oxium Fragment
 item.swordArdium.name=Ardium Sword
 item.shovelArdium.name=Ardium Shovel
-item.pickaxeArdium.name=Ardium Pickaxe-
+item.pickaxeArdium.name=Ardium Pickaxe
 item.hatchetArdium.name=Ardium Axe
 item.multiToolsArdium.name=Ardium MultiTools
 item.appleArdium.name=Ardium Apple
