Got the fake water working and immediately broke after trying to add the hot spring water (similar to kid icarus uprising)

--- a/src/main/resources/assets/ardium/lang/en_US.lang
+++ b/src/main/resources/assets/ardium/lang/en_US.lang
@@ -39,5 +39,6 @@ item.leggingsDeath.name=Death Leggings
 item.bootsDeath.name=Death Boots
 item.wandExplorer.name=Wand Explorer
 item.obsidianBreaker.name=Obsidian Breaker
+item.bucketFakeWater.name=Fake Water Bucket
 
 itemGroup.ardiumTab=Ardium
