Localized the Hot Spring Water Bucket in en_US.lang

--- a/src/main/resources/assets/ardium/lang/en_US.lang
+++ b/src/main/resources/assets/ardium/lang/en_US.lang
@@ -40,5 +40,6 @@ item.bootsDeath.name=Death Boots
 item.wandExplorer.name=Wand Explorer
 item.obsidianBreaker.name=Obsidian Breaker
 item.bucketFakeWater.name=Fake Water Bucket
+item.bucketHotSpringWater.name=Hot Spring Water Bucket
 
 itemGroup.ardiumTab=Ardium
